--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">QuizAPP</string>
+    <string name="check_wrong_answer">Check Wrong Answer</string>
 </resources>
